--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    testCompile 'junit:junit:4.12'
 }
