--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +16,7 @@ buildscript {
 ext {
     androidBuildToolsVersion = "24.0.1"
     supportLibraryVersion = '24.1.1'
+    butterKnifeVersion = '8.4.0'
 }
 
 allprojects {
