Changed to ExerciseActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,24 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
         <activity
             android:name=".features.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".features.exercise.ExerciseActivity"/>
 
         <provider
             android:name=".database.DatabaseProvider"
             android:authorities="${applicationId}.WorkoutProvider"
             android:enabled="true"
-            android:exported="false"
-            />
-    </application>
+            android:exported="false"/>
 
+    </application>
 </manifest>
