Renamed to db package; added rxjava dependency; added Exercise pojo and repo; loading Exercise in ExercisePresenter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".features.exercise.ExerciseActivity"/>
 
         <provider
-            android:name=".database.DatabaseProvider"
+            android:name=".db.DatabaseProvider"
             android:authorities="${applicationId}.WorkoutProvider"
             android:enabled="true"
             android:exported="false"/>
