--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "$androidBuildToolsVersion"
 
     defaultConfig {
-        applicationId "alobar.workout"
+        applicationId "com.alobarproductions.workout"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
