--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".app.App"
+        android:name=".app.WorkoutApp"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
