--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "$androidBuildToolsVersion"
+    buildToolsVersion "$AndroidBuildToolsVersion"
 
     defaultConfig {
         applicationId "com.alobarproductions.workout"
@@ -27,8 +27,8 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
-    compile "com.android.support:design:$supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$SupportLibraryVersion"
+    compile "com.android.support:design:$SupportLibraryVersion"
 
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
@@ -45,16 +45,13 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     // Override versions of the androidTest dependencies to be the same as the app's dependencies.
-    androidTestCompile "com.android.support:support-annotations:$supportLibraryVersion"
-    androidTestCompile "com.android.support:appcompat-v7:$supportLibraryVersion"
-    androidTestCompile "com.android.support:design:$supportLibraryVersion"
+    androidTestCompile "com.android.support:support-annotations:$SupportLibraryVersion"
+    androidTestCompile "com.android.support:appcompat-v7:$SupportLibraryVersion"
+    androidTestCompile "com.android.support:design:$SupportLibraryVersion"
 
-    compile "com.jakewharton:butterknife:$butterKnifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+    compile "com.jakewharton:butterknife:$ButterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$ButterKnifeVersion"
 
-    compile 'javax.inject:javax.inject:1'
-    compile 'javax.annotation:javax.annotation-api:1.2'
-
-    compile "com.google.dagger:dagger:$daggerVersion"
-    annotationProcessor  "com.google.dagger:dagger-compiler:$daggerVersion"
+    compile "com.google.dagger:dagger:$Dagger2Version"
+    annotationProcessor  "com.google.dagger:dagger-compiler:$Dagger2Version"
 }
