--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ buildscript {
 }
 
 ext {
-    androidBuildToolsVersion = "25.0.2"
-    supportLibraryVersion = '25.1.0'
-    butterKnifeVersion = '8.4.0'
-    daggerVersion = '2.8'
+    AndroidBuildToolsVersion = "25.0.2"
+    SupportLibraryVersion = '25.3.1'
+    ButterKnifeVersion = '8.5.1'
+    Dagger2Version = '2.10'
 }
 
 allprojects {
