--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,13 @@ dependencies {
     compile "com.android.support:appcompat-v7:$SupportLibraryVersion"
     compile "com.android.support:design:$SupportLibraryVersion"
 
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
+    compile "io.reactivex.rxjava2:rxjava:$RxJava2Version"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     compile 'org.apache.commons:commons-lang3:3.5'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.4.3'
-
 
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
